[package]
name = "halloy"
description = "Halloy IRC Client"
documentation = "https://halloy.chat/"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["hexchat-compat"]
debug = ["iced/debug"]
dev = ["debug", "data/dev"]
hexchat-compat = ["dep:rustpython-vm", "data/hexchat-compat"]

[workspace]
members = ["data", "ipc", "irc", "irc/proto"]

[workspace.package]
version = "0.1.0"
authors = ["Casper Rogild Storm", "Cory Forsstrom"]
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.44.0" }
futures = "0.3.30"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ['serde'] }
bytes = "1.10.1"
strum = { version = "0.27.1", features = ["derive"] }
anyhow = "1.0.97"
url = { version = "2.5.0", features = ["serde"] }
tokio-stream = { version = "0.1" }
timeago = "0.4.2"
itertools = "0.14.0"
emojis = "0.6.4"
rand = "0.9.0"
rand_chacha = "0.9.0"
palette = "0.7.4"
log = { version = "0.4.26", features = ['std'] }

[dependencies]
tokio = { workspace = true, features = ["rt", "fs", "process"] }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
timeago = { workspace = true }
itertools = { workspace = true }
emojis = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
palette = { workspace = true }
log = { workspace = true }

data = { version = "0.1.0", path = "data" }
ipc = { version = "0.1.0", path = "ipc" }

notify-rust = "4.11"
fern = "0.7.1"
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "fira-sans",
    "tokio",
    "lazy",
    "advanced",
    "image",
] }
unicode-segmentation = "1.6"
open = "5.0.1"
bytesize = "2.0.1"
rodio = "0.20.1"
humantime = "2.1.0"
dark-light = { git = "https://github.com/rust-dark-light/dark-light", rev = "8e1f745f91e1e805fa772a83e4744afe95d70aa1" }
strsim = "0.11.1"
rfd = { version = "0.15.2", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
uuid = { version = "1.15", features = ["v4"] }
irc = { path = "./irc" }
once_cell = "1.21.3"
rustpython-vm = { version = "0.4.0", optional = true }

[target.'cfg(windows)'.dependencies]
image = "0.24.6"
iced = { version = "0.14.0-dev", default-features = false, features = [
    "web-colors",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.2"
windows_exe_info = "0.4"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "aa633f6832c93d81fc829bcd351b369f0aada282" }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "aa633f6832c93d81fc829bcd351b369f0aada282" }

rustpython-compiler-source = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-compiler-core = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-codegen = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-common = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-derive-impl = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-literal = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-pylib = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-sre_engine = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }
rustpython-wtf8 = { git = "https://github.com/RustPython/RustPython", rev = "7f3bb36b7ebf6e820ab24deb9aef30c7af0a1c58" }

[profile.ci]
inherits = "dev"
opt-level = 0

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
cloned_instead_of_copied = "deny"
default_trait_access = "deny"
ignored_unit_patterns = "deny"
items_after_statements = "deny"
manual_is_variant_and = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args = "deny"
unnecessary_wraps = "deny"

[workspace.lints.clippy]
cloned_instead_of_copied = "deny"
default_trait_access = "deny"
ignored_unit_patterns = "deny"
items_after_statements = "deny"
manual_is_variant_and = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args = "deny"
unnecessary_wraps = "deny"

[workspace.metadata.typos.default]
extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # Ignore lines with trailing spellchecker:disable-line
]
extend-ignore-identifiers-re = [
    "ERR_[A-Z]+", # IRC Error Numeric
    "RPL_[A-Z]+", # IRC Reply Numeric
]
