[package]
name = "data"
authors = ["Casper Rogild Storm", "Cory Forsstrom"]
version = "0.1.0"
edition = "2021"

[features]
dev = []

[dependencies]
base64 = "0.21.2"
bytes = "1.5.0"
chrono = { version = "0.4", features = ['serde'] }
dirs-next = "2.0.0"
xdg = "2.5.2"
flate2 = "1.0"
futures = "0.3.21"
hex = "0.4.3"
iced_core = "0.14.0-dev"
log = { version = "0.4.16", features = ['std'] }
palette = "0.7.4"
rand = "0.8.4"
rand_chacha = "0.3.0"
seahash = "4.1.0"
serde_json = "1.0"
sha2 = "0.10.8"
toml = "0.8.11"
thiserror = "1.0.30"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["io-util", "fs"] }
tokio-stream = { version = "0.1", features = ["time", "fs"] }
itertools = "0.12.1"
timeago = "0.4.2"
url = { version = "2.5.0", features = ["serde"] }
fancy-regex = "0.14"
walkdir = "2.5.0"
once_cell = "1.19.0"
nom = "7.1"
const_format = "0.2.32"
strum = { version = "0.26.3", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
anyhow = "1.0.91"
image = "0.24.9"
html-escape = "0.2.13"
emojis = "0.6.4"

[dependencies.irc]
path = "../irc"

[dependencies.serde]
version = "1.0"
features = ["derive"]
