[package]
name = "data"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "data"
path = "src/lib.rs"

[[bin]]
name = "print_messages_json"
path = "src/bin.rs"
required-features = ["message_tests"]

[features]
dev = []
tor = ["irc/tor"]
message_tests = ["iced/tokio"]

[dependencies]
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["io-util", "fs"] }
chrono = { workspace = true }
bytes = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tokio-stream = { workspace = true, features = ["time", "fs"] }
timeago = { workspace = true }
itertools = { workspace = true }
emojis = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
palette = { workspace = true }
log = { workspace = true }
nucleo-matcher = { workspace = true }

base64 = "0.22.1"
dirs-next = "2.0.0"
xdg = "3.0.0"
flate2 = "1.0"
hex = "0.4.3"
iced_core = "0.15.0-dev"
iced_wgpu = "0.15.0-dev"
iced = { version = "0.15.0-dev", default-features = false, features = ["sysinfo"] }
indexmap = { version = "2.10", features = ["std", "serde"] }
seahash = "4.1.0"
serde_json = "1.0"
serde_ignored = "0.1"
serde-untagged = "0.1"
sha2 = "0.10.8"
toml = "0.8.11"
reqwest = { version = "0.12", features = ["json"] }
fancy-regex = "0.14"
walkdir = "2.5.0"
nom = "7.1"
const_format = "0.2.32"
derive_more = { version = "2.0.1", features = ["full"] }
image = "0.25.5"
html-escape = "0.2.13"
display-info = "0.5.7"

[dev-dependencies]
serde_test = "1.0"

[dependencies.irc]
path = "../irc"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[lints]
workspace = true
