[package]
name = "ipc"
authors = ["Casper Rogild Storm", "Cory Forsstrom"]
version = "0.1.0"
edition = "2021"

[dependencies]
url = { workspace = true }
tokio = { workspace = true, features = ["rt", "fs", "process"] }
futures = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

interprocess = { version = "1.2.1", features = ["tokio_support"] }

[dependencies.data]
path = "../data"
