[package]
name = "irc"
authors = ["Casper Rogild Storm", "Cory Forsstrom"]
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
thiserror = "1.0.30"
tokio = { version = "1.29", features = ["net", "full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
tokio-socks = "0.5.1"
tokio-util = { version = "0.7", features = ["codec"] }
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.1"

[dependencies.proto]
path = "proto"
package = "irc_proto"
