[package]
name = "irc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
tor = ["arti-client"]

[dependencies]
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }

arti-client = { version = "0.37", default-features = false, features = [
    "rustls",
    "compression",
    "tokio",
    "static-sqlite",
    "onion-service-client",
], optional = true }
async-http-proxy = { version = "1.2.5", features = [
    "runtime-tokio",
    "basic-auth",
] }
fast-socks5 = "0.10.0"
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "tls12",
    "ring",
] }
tokio-util = { version = "0.7", features = ["codec"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.1.1"
xz2 = { version = "0.1.7", features = ["static"] }

[dependencies.proto]
path = "proto"
package = "irc_proto"

[lints]
workspace = true
